Added ability to send emails EXCEPT have to figure out paths for url for 'blogs'

--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -4,4 +4,11 @@
 {% block content %}
 <h1>{{ post.title }}</h1>
 <p class="date">Published {{ post.publish }} by {{ post.author }}</p>
-{{ post.body | linebreaks }} {% endblock %}
+{{ post.body | linebreaks }}
+
+<!-- have to find a way to resolve post_share url -->
+<p>
+    <a href="">Share This Post</a>
+</p>
+
+{% endblock %}
