--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -2,4 +2,10 @@
 {% block content %}
 <h1>{{ post.title }}</h1>
 <p class="date">Published {{ post.publish }} by {{ post.author }}</p>
-{{ post.body | linebreaks }} {% endblock %}
+{{ post.body | linebreaks }}
+
+<p>
+    <a href="{% url " blog:post_share" post.id %}">Share Post</a>
+</p>
+
+{% endblock %}
