--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -8,7 +8,7 @@
 
 <!-- have to find a way to resolve post_share url -->
 <p>
-    <a href="">Share This Post</a>
+    <a href="{% url 'blog:post_share' post.id %}">Share Post</a>
 </p>
 
 {% endblock %}
