--- a/templates/blog/post/share.html
+++ b/templates/blog/post/share.html
@@ -1,4 +1,4 @@
-{% extends 'blog.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Share A Post{% endblock %}
 
@@ -7,7 +7,7 @@
 {% if sent %}
 <h1>Email successfully sent</h1>
 
-<p>"{{ post.title }}" was successfully sent to {{ form.cleaned_date.to }}</p>
+<p>"{{ post.title }}" was successfully sent to {{ form.cleaned_data.to }}</p>
 {% else %}
 <h1>Share "{{ post.title }}" by e-mail</h1>
 <form action="." method="post">
