--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -27,6 +27,7 @@
                 <span class="tagline"> Web Portfolio </span>
             </a>
         </h1>
+        <h2>Base.html from the pages app</h2>
         <!-- Nav Bar -->
     </header>
 
