--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,11 +1,21 @@
 {% extends "blog/base.html" %}
+
+{% block title %}My Blog{% endblock %}
+
 {% block content %}
 <h1>My Blog</h1>
+
 {% for post in posts %}
 <h2>
-  <a href="{{ post.get_absolute_url }}"> {{ post.title }} </a>
+  <a href="{{ post.get_absolute_url }}">
+    {{ post.title }}
+  </a>
 </h2>
-<p>{{ post.body | truncatewords:10 }}</p>
+
+<p class="date">
+  Published {{ post.publish }} by {{ post.author }}
+</p>
+{{ post.body|truncatewords:30|linebreaks }}
 {% endfor %}
 {% include "../pagination.html" with page=page_obj %}
 {% endblock %}
