--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -1,11 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>My Blog</h1>
+
+{% if tag %}
+<h2>Posts tagged with "{{ tag.name }}"</h2>
+{% endif %}
+
 {% for post in posts %}
 <h2>
   <a href="{{ post.get_absolute_url }}"> {{ post.title }} </a>
 </h2>
+
+{% if post.tags != 0 %}
+<p class="tags">
+  Tags:
+  {% for tag in post.tags.all %}
+  <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>
+  {% if not forloop.last %}, {% endif %}
+  {% endfor %}
+</p>
+{% endif %}
+
 <p>{{ post.body | truncatewords:10 }}</p>
 {% endfor %}
-{% include "../pagination.html" with page=page_obj %}
+{% include "../pagination.html" with page=posts %}
 {% endblock %}
